# ccnx-testrig

./: .gitignore  CMakeLists.txt  README.md  notes.md
scripts/: athena.out  athena_setup.sh  keyfile  startAthena.sh  test.pkcs12
src/: ccnxTestrig.c  ccnxTestrig.h  ccnxTestrigSuiteTestResult.c  ccnxTestrigSuiteTestResult.h  ccnxTestrig_Link.c  ccnxTestrig_Link.h  ccnxTestrig_PacketUtility.c  ccnxTestrig_PacketUtility.h  ccnxTestrig_Reporter.c  ccnxTestrig_Reporter.h  ccnxTestrig_Script.c  ccnxTestrig_Script.h  ccnxTestrig_Suite.c  ccnxTestrig_Suite.h  ccnxTestrig_SuiteTestResult.c  ccnxTestrig_SuiteTestResult.h
